deployment2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fitness
  labels:
    first: app
spec:
  replicas: 2
  selector:
    matchLabels: 
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: fitness-container
          image: harshithareddy24/loc:v1.0.0
          ports:
            - containerPort: 5000
