ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: fitness-ingress
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"

spec:
  ingressClassName: nginx

  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: fitness-service
            port:
              number: 5000
